<resources>
    <string name="app_name">sangz_client</string>
    <string name="action_settings">Settings</string>
    <string name="action_update">Update</string>

    <string name="title_activity_playlist">PlaylistActivity</string>

    <string name="sharedPreferences">tomi.piipposoft.sangz_client.sharedprefs</string>
    <string name="sharedPreferencesUrlKey">URL</string>
    <string name="sharedPreferencesUserIDKey">UserID</string>
    <string name="title_activity_song_details">SongDetailsActivity</string>

    <string name="upvoteButtonText">Upvote</string>
    <string name="downvoteButtonText">Downvote</string>

    <string name="song_details_song_name_info">Name</string>
    <string name="song_details_artist_name_info">Artist</string>
    <string name="song_details_album_name_info">Album</string>
    <string name="song_details_no_song_name">No name found</string>
    <string name="song_details_no_artist_name">No artist found</string>
    <string name="song_details_no_album_name">No album found</string>

    <string name="dialog_song_name_hint">Enter song name</string>
    <string name="dialog_media_location_hint">Enter media location</string>
    <string name="dialog_media_type_hint">Enter media type</string>

    <string name="dialog_edit_song_message">Edit song\'s info</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_songs">SongsActivity</string>

    <string name="playlist">Playlist</string>
    <string name="songs_list">Songs</string>

    <string name="songList_default_artist_text">N/A</string>
    <string name="songList_default_album_text">N/A</string>
    <string name="songList_snackbar_error_text">Include song\'s name and media location</string>

    <string name="openDrawer">Open drawer</string>
    <string name="closeDrawer">Close drawer</string>

    <string name="dialog_add_song_message">Add a new song</string>
    <string name="title_activity_login">LoginActivity</string>


    <!-- Related to loginActivity -->
    <string name="login_enter_name_hint">Enter User name</string>
    <string name="login_sign_in_button">Sign in</string>
    <string name="login_enter_ip">Enter IP &amp; Port for server or leave empty</string>
    <string name="login_snackbar_url_error_text">URL was malformed, did you remember http:// and port?</string>
    <string name="login_snackbar_name_error_text">This name was not found on server, try again</string>

</resources>
