<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tomi.piipposoft.sangz_client.Playlist.SongDetailsActivity"
    tools:showIn="@layout/activity_song_details">

    <TextView
        android:id="@+id/songNameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_details_song_name_info"/>

    <TextView
        android:id="@+id/songName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/songNameInfo"
        android:layout_below="@id/songNameInfo"
        android:textSize="26sp"
        android:text="@string/song_details_no_song_name"
        />

    <TextView
        android:id="@+id/artistNameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/songName"
        android:text="@string/song_details_artist_name_info"
        android:paddingTop="15dp"/>

    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/artistNameInfo"
        android:layout_toEndOf="@+id/artistNameInfo"
        android:paddingTop="15dp"
        android:text="@string/song_details_no_artist_name"
        />

    <TextView
        android:id="@+id/albumNameInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/artistName"
        android:text="@string/song_details_album_name_info"
        android:paddingTop="15dp"
        />

    <TextView
        android:id="@+id/albumName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/albumNameInfo"
        android:layout_toEndOf="@+id/albumNameInfo"
        android:paddingTop="15dp"
        android:text="@string/song_details_no_album_name"
        />


</RelativeLayout>
