<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="tomi.piipposoft.sangz_client.LoginActivity"
    tools:showIn="@layout/activity_login">



    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_enter_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_enter_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_enter_name_hint" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_enter_ip_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_above="@id/login_enter_name_layout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_enter_ip_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_enter_ip" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/login_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_sign_in_button"
        android:layout_below="@+id/login_enter_name_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

</RelativeLayout>
